<resources>
    <string name="app_name">phone bill</string>
    <string name="launch_calculator">Launch Calculator</string>
    <string name="phonebill_application">PhoneBill Application</string>
    <string name="add_phone_bill">Add Phone Bill</string>
    <string name="add_phone_call">Add Phone Call</string>
    <string name="help">Help</string>
    <string name="close_application">Close Application</string>
    <string name="display_phone_calls">Display Phone Calls</string>
    <string name="display_phone_bills">Display Phone Bills</string>
    <string name="button">Button</string>
    <string name="helpActivity">Help</string>
    <string name="return_to_menu">Return To Menu</string>
    <string name="addphonecall">Add Phone Call</string>
    <string name="add_to_new_bill">Add To New Bill</string>
    <string name="add_phone_calls">Add Phone Calls</string>
    <string name="add_to_existing_bill">Add To Existing Bill</string>
    <string name="add_to_new_bill2">Add To  New Bill</string>
    <string name="end_time">End Time:</string>
    <string name="begin_date">Begin Date:</string>
    <string name="customer">Customer:</string>
    <string name="caller">Caller:</string>
    <string name="callee">Callee:</string>
    <string name="begin_time">Begin Time:</string>
    <string name="am_pm">AM/PM:</string>
    <string name="end_date">End Date:</string>
    <string name="am_pm2">AM/PM:</string>
    <string name="phonebills">PhoneBills</string>
    <string name="view_calls">View Calls</string>
    <string name="view_bills">View Bills</string>
    <string name="add_call">Add Call</string>
    <string name="customersearch">Customer:</string>
    <string name="display_customers">display customers</string>
    <string name="calleeTag">Callee:</string>
    <string name="begin_dateTag">Begin Date:</string>
    <string name="end_timeTag">End Time:</string>
    <string name="end_ampmTag">End AmPm</string>
    <string name="customerTag">Customer:</string>
    <string name="callerInput">Caller:</string>
    <string name="end_dateTag">End Date:</string>
    <string name="begin_timetAg">Begin Time:</string>
    <string name="begin_ampmTag">Begin AmPm:</string>
    <string name="customerSearch">Customer:</string>
</resources>